--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Heapleap Light</title>
   </head>
   <body>
-    <div id="root"  style="background-color: #292B32;"></div>
+    <div id="root"  style="background-color:#F7F7F8;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
